ページ内リンク修正版

--- a/js01practice.html
+++ b/js01practice.html
@@ -20,7 +20,7 @@
         <img src="images/topView.jpg" alt="トップ画像">
         <nav>
             <ul>
-                <li><a href="#mews">ニュース</a></li>
+                <li><a href="#news">ニュース</a></li>
                 <li><a href="#menu">商品</a></li>
                 <li><a href="#footer">ショップ情報</a></li>
             </ul>
